--- a/packages/vite-mapps-comp-lib/package.json
+++ b/packages/vite-mapps-comp-lib/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "test:generate-output": "jest --json --outputFile=.jest-test-results.json",
+    "lint": "eslint src/**/*.js src/**/*.jsx"
   },
   "dependencies": {
     "@hods/alert": "^0.2.1",
@@ -29,6 +31,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
+    "@babel/eslint-parser": "^7.18.2",
     "@storybook/addon-a11y": "^6.5.9",
     "@storybook/addon-actions": "^6.5.9",
     "@storybook/addon-essentials": "^6.5.9",
@@ -43,6 +46,8 @@
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
     "babel-loader": "^8.2.5",
+    "eslint": "^8.19.0",
+    "eslint-plugin-react": "^7.30.1",
     "jest": "^28.1.2",
     "jest-axe": "^6.0.0",
     "jest-environment-jsdom": "^28.1.2",
